<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Auth.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@drawable/shape_1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@id/appLogo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/appLogo" />

            <ImageView
                android:id="@+id/appLogo"
                android:layout_height="80dp"
                android:layout_width="80dp"
                android:transitionName="4logo"
                android:src="@drawable/logo_app"
                android:layout_margin="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/appLogo"
                android:layout_margin="20dp"
                android:padding="40dp"
                android:background="@drawable/bg_form"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/username"/>

                <EditText
                    android:id="@+id/inputlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"/>

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:layout_marginTop="25dp"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/inputpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/reset_pw"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/form"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/forgot_password"
                    android:gravity="right"/>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:fontFamily="@font/poppins_bold"
                    android:background="@drawable/btn_blue"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/form"
                android:text="@string/you_need_account_register"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <ImageView
            android:id="@+id/illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:src="@drawable/illust_1" />
    </LinearLayout>
</ScrollView>
