<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.AppCompat.Light.NoActionBar"
    tools:context=".Auth.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/shClosedRegist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:visibility="gone"
            android:fontFamily="@font/poppins_light"
            android:text="Registration not opened now"
            android:gravity="center"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_regist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:background="@drawable/shape_4"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

            <Button
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/btn_back_green"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/bg_form"
                android:orientation="vertical"
                android:padding="40dp"
                app:layout_constraintTop_toBottomOf="@id/btn_back">

                <LinearLayout
                    android:id="@+id/container_nip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/nip" />

                    <EditText
                        android:id="@+id/inputnip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nip" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/container_nis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtNis"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/nis" />

                    <EditText
                        android:id="@+id/inputnis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nis" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/inputname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/inputemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

                <LinearLayout
                    android:id="@+id/container_profession_regist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtProfesi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Profesi" />

                    <Spinner
                        android:id="@+id/spinProfesi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Profesi" />
                </LinearLayout>


<!--                <TextView-->
<!--                    android:id="@+id/txtbirthday"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="10dp"-->
<!--                    android:fontFamily="@font/poppins_bold"-->
<!--                    android:text="Birthday" />-->
<!--                -->
<!--                <EditText-->
<!--                    android:id="@+id/edtbirthday"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="Birthday"/>-->

                <LinearLayout
                    android:id="@+id/container_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="Class" />

                    <Spinner
                        android:id="@+id/spinclasslevel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <Spinner
                        android:id="@+id/spinmajors"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Profesi" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/password" />

                <EditText
                    android:id="@+id/inputpasswordregis"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />

                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/btn_green"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/register"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/illustration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/illust_3" />
    </LinearLayout>
</ScrollView>
